# mcpdemo

./: .gitignore  README.md  democlient.py  pyproject.toml  server.py
demo01-streamable/: Makefile  pyproject.toml  server.py
